<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.agta.rxwebsocket.MainActivity">
    <item
        android:id="@+id/action_most_star"
        android:orderInCategory="100"
        android:title="@string/action_most_star"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_least_star"
        android:orderInCategory="100"
        android:title="@string/action_least_star"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_no_filter"
        android:orderInCategory="100"
        android:title="@string/action_no_filter"
        app:showAsAction="collapseActionView" />
</menu>
