<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/upComingFragment">


    <fragment
        android:id="@+id/upComingFragment"
        android:name="com.example.movie.ui.upcoming.UpComingFragment"
        android:label="@string/action_up_coming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_upComingFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/topRatedFragment"
        android:name="com.example.movie.ui.toprated.TopRatedFragment"
        android:label="@string/action_top_rated"
        tools:layout="@layout/fragment_top_rated" >
        <action
            android:id="@+id/action_topRatedFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_movieFragment"
        app:destination="@id/topRatedFragment" />

    <fragment
        android:id="@+id/nowPlayingFragment"
        android:name="com.example.movie.ui.now.NowPlayingFragment"
        android:label="@string/action_now_play"
        tools:layout="@layout/fragment_now_playing" >
        <action
            android:id="@+id/action_nowPlayingFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.example.movie.ui.detail.MovieDetailFragment"
        android:label="@string/action_detail"
        tools:layout="@layout/fragment_movie_detail" >
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>